<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuration.ConfigConecActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/lookfor"
        tools:ignore="MissingConstraints"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            tools:ignore="TextFields">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logo_smart_things"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitCenter"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:contentDescription="@string/logo"
                    android:gravity="center"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/logo_smart_things" />

                <TextView
                    android:id="@+id/text_smart_things"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:text="@string/name_app"
                    android:textColor="#00CC00"
                    android:textScaleX="1"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/back_buttom"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:src="@drawable/button_back"/>

            </LinearLayout>

            <TextView
                style="@style/titles"
                android:text="@string/set_conec" />

            <EditText
                android:id="@+id/edit_ip"
                android:backgroundTint="@color/naranja_O"
                android:hint="@string/hostserver"
                style="@style/edit_view" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/edit_use_server"
                android:backgroundTint="@color/naranja_O"
                android:hint="@string/userserver"
                style="@style/edit_view" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/edit_password_server"
                android:backgroundTint="@color/naranja_O"
                android:hint="@string/passwordserver"
                style="@style/edit_view" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/buttom_conec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_buttom_one"
                android:text="@string/initConec"
                style="@style/buttom"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>