<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Auth.LogIn.LogInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:id="@+id/Lo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            tools:ignore="TextFields">

            <Space
                android:layout_width="match_parent"
                android:layout_height="65dp" />

            <ImageView
                android:id="@+id/logo_smart_things"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo_smart_things" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/text_smart_things"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:text="@string/name_app"
                android:textColor="#00CC00"
                android:textScaleX="1"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />


            <EditText
                android:id="@+id/Recover_email"
                android:backgroundTint="@color/naranja_O"
                android:hint="@string/edit_gmail"
                android:inputType="textEmailAddress"
                style="@style/edit_view" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/Recover_bottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/change_password"
                android:background="@drawable/style_buttom_two"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <ProgressBar
                android:id="@+id/progressBarRecover"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>